--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     simple_dash:
       abandoned_carts: Abandoned Carts
       abandoned_carts_products: Abandoned Cart Products
+      abandoned_orders: Abandoned Orders
       best_selling_products: Best Selling Products
       best_selling_taxons: Best Selling Taxons
       biggest_spenders: Biggest Spenders
