Add new users by day graph

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
       last_7_days: Last 7 Days
       last_month: Last Month
       last_year: Last Year
+      new_users: New Users
       ord_qty: Ord. Qty
       ord_total: Ord. Total
       orders: Orders
